# Pull-Request-Pilot

./: .dockerignore  .env.example  Dockerfile  README.md  TECHNICAL_DEEP_DIVE.md  pyproject.toml
scripts/: test_webhook.py
src/: config.py  main.py
src/api/: webhook.py
src/brain/agents/: base_agent.py  review_agent.py  utils.py
src/brain/prompts/: prompt_registory.py  reviewer_prompt.py
src/code_parser/: language.py  parser.py  python_parser.py  tree_sitter_parser.py
src/handlers/: github_handler.py
src/models/: github_model.py
src/services/: reviewer.py  semantic_filter.py
src/services/llm/: anthropic_client.py  base.py  ollama_client.py  openai_client.py
src/services/scm/: base.py  github.py
src/utils/: filter_utils.py  hunk_processor.py
