[project]
name = "pull-request-pilot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "lakhan", email = "lakhan4797@gmail.com"},
]
dependencies = ["fastapi>=0.128.0", "uvicorn>=0.39.0", "pydantic-settings>=2.11.0"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
