[project]
name = "pull-request-pilot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "lakhan", email = "lakhan4797@gmail.com"},
]
dependencies = ["fastapi>=0.128.0", "uvicorn>=0.39.0", "pydantic-settings>=2.11.0", "requestor>=0.1.1", "tree-sitter", "tree-sitter-python", "tree-sitter-javascript", "tree-sitter-typescript", "tree-sitter-go", "tree-sitter-java", "tree-sitter-c", "tree-sitter-cpp", "tree-sitter-ruby", "tree-sitter-rust"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
